<resources>
    <string name="app_name">MyMall</string>

    <string name="hello_blank_fragment1">Lorem ipsum dolor sit amet, eu diam scripta facilis usu. Vim
erat persequeris concludaturque an, usu vidit nominati
complectitur ex. Pri mundi albucius elaboraret id. Cu nam
omnium audire necessitatibus.
\n
Id vel verear legimus dissentias, mea oratio petentium
inciderint in. Ei ius populo similique, at mel brute petentium.
Sit an vide integre, at harum blandit petentium usu, et mea
eros alterum consulatu. Quot putant posidonium has ei,
verear constituto sea ei. Deseruisse concludaturque mel ut.
Alii senserit eum ne, est et graece tibique, civibus recusabo
suscipiantur at vim.</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password_italic"><u>Forgot Password?</u></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="logo">logo</string>
    <string name="close">Close</string>
    <string name="dont_have_account"><u>Don\'t have account? Sign Up!</u></string>
    <string name="or">OR</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account"><u>Already have an account? Sign in!</u></string>
    <string name="comfirm_password">Comfirm Password</string>
    <string name="sub_forgot_password">Don\'t worry we just need your \n registered email address and its done!</string>
    <string name="go_back">Go Back</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="temp_lorem">Lorem ipsum dolor sit amet, eu diam scripta facilis usu. Vimerat persequeris concludaturque an, usu</string>

    <string-array name="list_link_icon_category">
        <item>home_icon</item>
        <item>electronic_icon</item>
        <item>appliance_icon</item>
        <item>furniture_icon</item>
        <item>fashion_icon</item>
        <item>electronic_icon</item>
        <item>appliance_icon</item>
        <item>furniture_icon</item>
        <item>fashion_icon</item>
        <item>electronic_icon</item>
    </string-array>


    <string-array name="list_name_icon_category">
        <item>Home</item>
        <item>Electronics</item>
        <item>Appliances</item>
        <item>Furniture</item>
        <item>Fashion</item>
        <item>Toys</item>
        <item>Sports</item>
        <item>Wall Arts</item>
        <item>Books</item>
        <item>Shoes</item>
    </string-array>

    <string-array name="list_color_banner_slide">
        <item>#0069A5</item>
        <item>#006905</item>
        <item>#A01177</item>
        <item>#FF5722</item>
        <item>#E91E63</item>
        <item>#0069A5</item>
        <item>#006905</item>
        <item>#A01177</item>
        <item>#FF5722</item>
        <item>#E91E63</item>
    </string-array>

    <string-array name="list_img_product">
        <item>img_phone_1</item>
        <item>img_phone_2</item>
        <item>img_phone_3</item>
        <item>img_phone_4</item>
        <item>img_phone_1</item>
        <item>img_phone_2</item>
        <item>img_phone_3</item>
        <item>img_phone_4</item>
        <item>img_phone_1</item>
        <item>img_phone_2</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
